--- a/weibo/MainMenu.xib
+++ b/weibo/MainMenu.xib
@@ -178,7 +178,7 @@
 							<array class="NSMutableArray" key="NSMenuItems">
 								<object class="NSMenuItem" id="705341025">
 									<reference key="NSMenu" ref="720053764"/>
-									<string key="NSTitle">New</string>
+									<string key="NSTitle">Compose </string>
 									<string key="NSKeyEquiv">n</string>
 									<int key="NSKeyEquivModMask">1048576</int>
 									<int key="NSMnemonicLoc">2147483647</int>
@@ -1186,6 +1186,14 @@
 					</object>
 					<int key="connectionID">801</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">showComposeWindow:</string>
+						<reference key="source" ref="1014"/>
+						<reference key="destination" ref="705341025"/>
+					</object>
+					<int key="connectionID">802</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -1899,16 +1907,32 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">801</int>
+			<int key="maxID">802</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">ANSegmentedControl</string>
+					<string key="superclassName">NSSegmentedControl</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ANSegmentedControl.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">AppDelegate</string>
 					<string key="superclassName">NSObject</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/AppDelegate.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">EQSTRScrollView</string>
+					<string key="superclassName">NSScrollView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/EQSTRScrollView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -1930,6 +1954,88 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBUserSource</string>
 						<string key="minorKey"/>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HomeTimelineController</string>
+					<string key="superclassName">TimelineController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HomeTimelineController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MainWindowController</string>
+					<string key="superclassName">NSWindowController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="showHomeTimeline:">id</string>
+						<string key="showMentionTimeline:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="showHomeTimeline:">
+							<string key="name">showHomeTimeline:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="showMentionTimeline:">
+							<string key="name">showMentionTimeline:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="anSegmentedControl">ANSegmentedControl</string>
+						<string key="authorizingUserProfileImage">NSImageView</string>
+						<string key="homeTimeLineController">HomeTimelineController</string>
+						<string key="homeTimeLineScrollView">EQSTRScrollView</string>
+						<string key="mentionTimeLineController">MentionTimelineController</string>
+						<string key="mentionsTimeLineScrollView">EQSTRScrollView</string>
+						<string key="timelineTabs">NSTabView</string>
+						<string key="titleBar">NSView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="anSegmentedControl">
+							<string key="name">anSegmentedControl</string>
+							<string key="candidateClassName">ANSegmentedControl</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="authorizingUserProfileImage">
+							<string key="name">authorizingUserProfileImage</string>
+							<string key="candidateClassName">NSImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="homeTimeLineController">
+							<string key="name">homeTimeLineController</string>
+							<string key="candidateClassName">HomeTimelineController</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="homeTimeLineScrollView">
+							<string key="name">homeTimeLineScrollView</string>
+							<string key="candidateClassName">EQSTRScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mentionTimeLineController">
+							<string key="name">mentionTimeLineController</string>
+							<string key="candidateClassName">MentionTimelineController</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mentionsTimeLineScrollView">
+							<string key="name">mentionsTimeLineScrollView</string>
+							<string key="candidateClassName">EQSTRScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="timelineTabs">
+							<string key="name">timelineTabs</string>
+							<string key="candidateClassName">NSTabView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="titleBar">
+							<string key="name">titleBar</string>
+							<string key="candidateClassName">NSView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MainWindowController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MentionTimelineController</string>
+					<string key="superclassName">TimelineController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MentionTimelineController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -1971,6 +2077,25 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/NSDocument.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">TimelineController</string>
+					<string key="superclassName">NSObject</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">timelineTable</string>
+						<string key="NS.object.0">NSTableView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">timelineTable</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">timelineTable</string>
+							<string key="candidateClassName">NSTableView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/TimelineController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
