--- a/weibo/MainWindowController.xib
+++ b/weibo/MainWindowController.xib
@@ -11,10 +11,10 @@
 			<string key="NS.object.0">2549</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
+			<string>NSButton</string>
+			<string>NSButtonCell</string>
 			<string>NSCustomObject</string>
 			<string>NSCustomView</string>
-			<string>NSImageCell</string>
-			<string>NSImageView</string>
 			<string>NSScrollView</string>
 			<string>NSScroller</string>
 			<string>NSTabView</string>
@@ -169,7 +169,7 @@
 								</object>
 							</array>
 							<reference key="NSSelectedTabViewItem" ref="432873715"/>
-							<object class="NSFont" key="NSFont">
+							<object class="NSFont" key="NSFont" id="250445045">
 								<string key="NSName">LucidaGrande</string>
 								<double key="NSSize">13</double>
 								<int key="NSfFlags">1044</int>
@@ -202,43 +202,38 @@
 				<bool key="NSSharedInstance">YES</bool>
 			</object>
 			<object class="NSCustomView" id="308283788">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">268</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="NSImageView" id="59228469">
+					<object class="NSButton" id="340934583">
 						<reference key="NSNextResponder" ref="308283788"/>
 						<int key="NSvFlags">268</int>
-						<set class="NSMutableSet" key="NSDragTypes">
-							<string>Apple PDF pasteboard type</string>
-							<string>Apple PICT pasteboard type</string>
-							<string>Apple PNG pasteboard type</string>
-							<string>NSFilenamesPboardType</string>
-							<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
-							<string>NeXT TIFF v4.0 pasteboard type</string>
-						</set>
-						<string key="NSFrame">{{313, 2}, {37, 37}}</string>
+						<string key="NSFrame">{{397, 3}, {50, 32}}</string>
 						<reference key="NSSuperview" ref="308283788"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSImageCell" key="NSCell" id="656102495">
-							<int key="NSCellFlags">134217728</int>
-							<int key="NSCellFlags2">33554432</int>
-							<object class="NSCustomResource" key="NSContents">
-								<string key="NSClassName">NSImage</string>
-								<string key="NSResourceName">home_w</string>
-							</object>
+						<object class="NSButtonCell" key="NSCell" id="960458345">
+							<int key="NSCellFlags">-2080374784</int>
+							<int key="NSCellFlags2">134217728</int>
+							<string key="NSContents">写</string>
+							<reference key="NSSupport" ref="250445045"/>
 							<string key="NSCellIdentifier">_NS:9</string>
-							<int key="NSAlign">0</int>
-							<int key="NSScale">0</int>
-							<int key="NSStyle">3</int>
-							<bool key="NSAnimates">NO</bool>
+							<reference key="NSControlView" ref="340934583"/>
+							<int key="NSButtonFlags">-930988032</int>
+							<int key="NSButtonFlags2">130</int>
+							<string key="NSAlternateContents"/>
+							<string key="NSKeyEquivalent"/>
+							<int key="NSPeriodicDelay">200</int>
+							<int key="NSPeriodicInterval">25</int>
 						</object>
 						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
-						<bool key="NSEditable">YES</bool>
 					</object>
 				</array>
 				<string key="NSFrameSize">{450, 40}</string>
-				<reference key="NSNextKeyView" ref="59228469"/>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="340934583"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="NSClassName">NSView</string>
 			</object>
@@ -284,6 +279,14 @@
 						<reference key="destination" ref="308283788"/>
 					</object>
 					<int key="connectionID">1167</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">showComposeWindow:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="340934583"/>
+					</object>
+					<int key="connectionID">1330</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -410,22 +413,9 @@
 						<int key="objectID">1156</int>
 						<reference key="object" ref="308283788"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="59228469"/>
+							<reference ref="340934583"/>
 						</array>
 						<reference key="parent" ref="0"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">1157</int>
-						<reference key="object" ref="59228469"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="656102495"/>
-						</array>
-						<reference key="parent" ref="308283788"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">1158</int>
-						<reference key="object" ref="656102495"/>
-						<reference key="parent" ref="59228469"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">1300</int>
@@ -452,6 +442,19 @@
 						<reference key="object" ref="790468526"/>
 						<reference key="parent" ref="916654009"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1327</int>
+						<reference key="object" ref="340934583"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="960458345"/>
+						</array>
+						<reference key="parent" ref="308283788"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1328</int>
+						<reference key="object" ref="960458345"/>
+						<reference key="parent" ref="340934583"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -464,14 +467,14 @@
 				<string key="1.IBWindowTemplateEditedContentRect">{{357, 418}, {480, 270}}</string>
 				<integer value="1" key="1.NSWindowTemplate.visibleAtLaunch"/>
 				<string key="1156.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="1157.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="1158.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1300.CustomClassName">PXListView</string>
 				<string key="1300.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1301.CustomClassName">PXListDocumentView</string>
 				<string key="1301.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1302.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1303.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1327.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1328.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="558.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<object class="NSMutableDictionary" key="589.IBAttributePlaceholdersKey">
@@ -494,7 +497,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">1322</int>
+			<int key="maxID">1330</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -626,25 +629,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">TimelineController</string>
 					<string key="superclassName">NSObject</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="timelineListView">PXListView</string>
-						<string key="timelineTable">NSTableView</string>
-						<string key="timelineView">PXListView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="timelineListView">
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">timelineListView</string>
+						<string key="NS.object.0">PXListView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">timelineListView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
 							<string key="name">timelineListView</string>
 							<string key="candidateClassName">PXListView</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="timelineTable">
-							<string key="name">timelineTable</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="timelineView">
-							<string key="name">timelineView</string>
-							<string key="candidateClassName">PXListView</string>
-						</object>
-					</dictionary>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/TimelineController.h</string>
@@ -656,9 +651,5 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="NS.key.0">home_w</string>
-			<string key="NS.object.0">{128, 128}</string>
-		</object>
 	</data>
 </archive>
