--- a/weibo/StatusListCellView.xib
+++ b/weibo/StatusListCellView.xib
@@ -106,12 +106,7 @@
 								<integer value="1" key="NSUnderline"/>
 							</dictionary>
 							<nil key="NSDefaultParagraphStyle"/>
-							<object class="NSTextFinder" key="NSTextFinder">
-								<reference key="NSTextFinderClient" ref="279118671"/>
-								<int key="NSTextFinderStyle">1</int>
-								<bool key="NSIncrementalSearchingEnabled">NO</bool>
-								<bool key="NSIncrementalSearchingShouldDimContentView">YES</bool>
-							</object>
+							<nil key="NSTextFinder"/>
 							<int key="NSPreferredTextFinderStyle">1</int>
 						</object>
 						<int key="NSTVFlags">4</int>
@@ -130,7 +125,7 @@
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="673691498">
 							<int key="NSCellFlags">68157504</int>
-							<int key="NSCellFlags2">272630784</int>
+							<int key="NSCellFlags2">4195328</int>
 							<string key="NSContents">Label</string>
 							<object class="NSFont" key="NSSupport">
 								<string key="NSName">LucidaGrande-Bold</string>
@@ -146,10 +141,8 @@
 								<reference key="NSColor" ref="568688282"/>
 							</object>
 							<object class="NSColor" key="NSTextColor">
-								<int key="NSColorSpace">6</int>
-								<string key="NSCatalogName">System</string>
-								<string key="NSColorName">controlTextColor</string>
-								<reference key="NSColor" ref="178521953"/>
+								<int key="NSColorSpace">1</int>
+								<bytes key="NSRGB">MC42MDAwMDAwMjM4IDAuNDAwMDAwMDA2IDAuMjAwMDAwMDAzAA</bytes>
 							</object>
 						</object>
 						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -165,7 +158,7 @@
 							<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
 							<string>NeXT TIFF v4.0 pasteboard type</string>
 						</set>
-						<string key="NSFrame">{{7, 17}, {48, 48}}</string>
+						<string key="NSFrame">{{10, 17}, {48, 48}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1015103756"/>
@@ -248,9 +241,9 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="1005"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="258653169"/>
 							<reference ref="1015103756"/>
 							<reference ref="279118671"/>
+							<reference ref="258653169"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
